--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -1,118 +1,136 @@
 @use "../abstracts" as a;
 
 .blog {
-    // padding: 4rem;
-    position: relative;
-    &__head {
-        margin: 5rem 0;
+  padding: 4rem 0;
+  position: relative;
+  &__section--logo {
+    margin-bottom: 3rem;
+    & img {
+      width: 150px;
     }
-    &__header {
-        text-transform: capitalize;
-        color: transparent;
-        font-weight: a.$fw-7;
-        font-size: 4rem;
-        line-height: 89.5%;
-        -webkit-text-stroke: 2px a.$text-color;
-        margin-bottom: a.$m-bot-2;
+  }
+
+  &__head {
+    margin: 5rem 0;
+  }
+  &__header {
+    text-transform: capitalize;
+    color: transparent;
+    font-weight: a.$fw-7;
+    font-size: 4rem;
+    line-height: 89.5%;
+    -webkit-text-stroke: 2px a.$text-color;
+    margin-bottom: a.$m-bot-2;
+  }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4rem;
+  }
+  &__description {
+    gap: 1rem;
+    .blog__summary {
+      font-size: 1.5rem;
     }
-    &__container{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        gap: 4rem;
+  }
+  &__text {
+    font-weight: a.$fw-3;
+    font-size: a.$default-font;
+    margin-bottom: 3rem;
+  }
+  &__link {
+    display: flex;
+    align-items: center;
+    & span {
+      color: a.$tedx-red;
+      font-size: a.$default-font;
     }
-    &__description {
-        gap: 1rem;
-        .blog__summary{
-            font-size: 1.5rem;
-        }
+    & i {
+      font-size: 2rem;
+      color: a.$tedx-red;
+      padding-left: a.$p-1;
+      align-items: center;
+      &:hover {
+        transform: translateX(3%);
+      }
     }
-    &__text {
-        font-weight: a.$fw-3;
-        font-size: a.$default-font;
-        margin-bottom: 3rem;
-    }
-    &__link {
-        display: flex;
-        align-items: center;      
-        & span {
-            color: a.$tedx-red;
-            font-size: a.$default-font;
-        }
-        & i {
-            font-size: 2rem;
-            color: a.$tedx-red;
-            padding-left: a.$p-1;
-            align-items: center;
-            &:hover {
-                transform: translateX(3%);
-            }
-        }
-    }
-    &__img {
-        // position: relative;
-        width: 100%;
-        height: 300px;
-    }
-    &__next {
-        position: absolute;
-        bottom: 2.3rem;
-        right: 2rem;
-        background-color: a.$tedx-red;
-        cursor: pointer;
-        height: 5rem;
-        width: 5rem;
-        font-size: a.$default-font;
-        color: transparent;
-        @include a.main-center;
-        align-items: center;
-        -webkit-text-stroke: 1px a.$text-color;
-    }
+  }
+  &__img {
+    // position: relative;
+    width: 100%;
+    height: 300px;
+  }
+  &__next {
+    position: absolute;
+    bottom: 4.3rem;
+    right: 2rem;
+    background-color: a.$tedx-red;
+    cursor: pointer;
+    height: 5rem;
+    width: 5rem;
+    font-size: a.$default-font;
+    color: transparent;
+    @include a.main-center;
+    align-items: center;
+    -webkit-text-stroke: 1px a.$text-color;
+  }
 }
 
 .de-active {
-    display: none;
+  display: none;
 }
-
 
 // Media Queries
 
-@media screen and (min-width: 576px) {}
-
-@media screen and (min-width: 768px) {}
-
-@media screen and (max-width: 967px) { //Only For the round scrolling
-
+@media screen and (min-width: 576px) {
 }
 
-@media screen and (min-width: 968px) { 
-    .blog__header{
-        font-size: a.$main-font;
-        margin-bottom: 3rem;
-    }
-    .blog__container{
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    .blog__description{
-        width: 30%;
-        align-self: flex-start;
-    }
-    .blog__next{
-        position: absolute;
-        bottom: 2rem;
-        right: 7.3rem;
-        height: 20rem;
-        width: 20rem;
-        font-size: a.$next-font;
-    }
-    .blog__img {
+@media screen and (min-width: 768px) {
+  .blog__next {
+    position: absolute;
+    bottom: 42px;
+    right: 11.5%;
+    height: 20rem;
+    width: 20rem;
+    font-size: 7rem;
+    // font-size: a.$next-font;
+  }
+}
+
+@media screen and (max-width: 967px) {
+  //Only For the round scrolling
+}
+
+@media screen and (min-width: 968px) {
+  .blog__header {
+    font-size: a.$main-font;
+    margin-bottom: 3rem;
+  }
+  .blog__container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .blog__description {
+    width: 30%;
+    align-self: flex-start;
+  }
+  .blog__next {
+    position: absolute;
+    bottom: 42px;
+    right: 20px;
+    height: 20rem;
+    width: 20rem;
+    font-size: 7rem;
+    // font-size: a.$next-font;
+  }
+  .blog__img {
     position: relative;
     width: 80rem;
     height: 60rem;
-}
+  }
 }
 
-@media screen and (min-width: 1200px) {}
-
+@media screen and (min-width: 1200px) {
+}
