--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -28,7 +28,7 @@
     }
   }
   &__text {
-    font-size: a.$default-font;
+    font-size: 1.5rem;
     letter-spacing: 1px;
     text-align: left;
     line-height: 1.5;
