--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -3,11 +3,9 @@
 .about-body{
   background-color: a.$bg-color;
 }
-.nav__mini {
-  font-size: 2rem;
-  text-align: right;
-  padding: 2rem 2rem 2rem 0rem;
-}
+// .nav__mini {
+  
+// }
 .about{
   &__header {
 
