--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -32,7 +32,8 @@
   &__description {
     gap: 1rem;
     .blog__summary {
-      font-size: 2rem;
+      font-size: 1.8rem;
+      line-height: 1.5;
     }
   }
   &__text {
