--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,6 +28,7 @@ a,a:visited,a:active{
 
 
 .text__big {
+  margin-left: -12rem;
   font-size: a.$big-font;
   font-weight: a.$fw-7;
   color: rgba(255, 255, 255, 0.3);//to be editted
