--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -183,6 +183,7 @@
 
 .team-footer {
   margin-top: 15rem;
+  margin: 0 auto;
 }
 
 // /*======== HEADER ========*/
@@ -280,3 +281,5 @@
     --smaller-font-size: 0.813rem;
   }
 }
+
+
