--- a/sass/layout/_background.scss
+++ b/sass/layout/_background.scss
@@ -13,9 +13,9 @@
     bottom: 0%;
     right: 0%;
     font-size: 6.5rem;
-    font-weight: 900;
+    font-weight: 600;
     line-height: 0.73;
-    text-align: end;
+    text-align: center;
     color: rgba(255, 255, 255, 0.04);
     letter-spacing: 5px;
 }
