--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,9 +28,10 @@ a,a:visited,a:active{
 
 
 .text__big {
-  margin-left: -12rem;
-  font-size: a.$big-font;
-  font-weight: a.$fw-7;
+  margin-top: 5rem;
+  font-size: 6.5rem;
+  line-height: 0.73;
+  font-weight: a.$fw-6;
   color: rgba(255, 255, 255, 0.3);//to be editted
 }
 
