--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -56,7 +56,7 @@
     // flex-wrap: wrap;
     // justify-content: flex-start;
     // margin: 4rem 0;
-    margin-top: 5rem;
+    margin: 5rem 0;
     gap: 2.5rem;
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
