--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,11 +2,12 @@
 @use "../abstracts" as a;
 
 .footer {
-    margin: 2rem 0;
+    margin: 20rem 0 3rem;
 
     &__tedx {
         text-align: center;
         font-size: 1.5rem;
+        margin: 2rem;
     }
     &__container{
         display: block;
