Team background scrolling changes

--- a/sass/pages/_team.scss
+++ b/sass/pages/_team.scss
@@ -129,7 +129,7 @@
     position: relative;
     margin: a.$m-2;
     width: 60rem;
-    height: auto;
+    height: 400px;
     overflow: auto;
     animation-duration: 0.4s;
     animation-name: popup;
@@ -160,10 +160,10 @@
   }
   &__bio {
     margin-top: a.$m-1;
-    font-size: a.$default-font;
-    text-align: justify;
-    font-weight: a.$fw-3;
-    line-height: 1.4;
+    font-size: 1.5rem;
+    // text-align: justify;
+    font-weight: 100;
+    line-height: 1.5;
   }
   &__name {
     font-size: 2rem;
@@ -210,6 +210,9 @@
   .team__group {
     gap: 1.5rem;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .preview__body{
+    height: auto;
   }
 }
 
