--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -47,7 +47,7 @@
             justify-content: space-between;
             flex-direction: column;
             margin-top: a.$m-2;
-            position: relative;
+            // position: relative;
             &_mail h2{
                 font-size: 2.5rem;
                 text-transform: capitalize;
