--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,7 +36,7 @@
     h2 {
       font-size: 1.4rem;
       font-weight: 100;
-      line-height: 1.5;
+      line-height: 1.8;
     }
   }
   .hero {
@@ -47,7 +47,7 @@
       }
       &--sub {
         font-size: 1.4rem;
-        line-height: 1.5;
+        line-height: 1.8;
         font-weight: 100;
       }
       &--font {
@@ -160,7 +160,7 @@
     // column-gap: 10rem;
     grid-template-columns: 70% 30%;
     height: 100vh;
-    margin-top: 0;
+    // margin-top: ;
     &--intro {
       .intro-title {
         color: a.$text-color;
