--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,7 +2,7 @@
 @use "../abstracts" as a;
 
 .footer {
-    margin: 20rem 0 3rem;
+    padding: 1rem 0 1rem;
 
     &__tedx {
         text-align: center;
